--- a/src/index.css
+++ b/src/index.css
@@ -97,6 +97,55 @@ code {
 }
 
 
+/* burbuja del bot */
+.fcUymo {
+  -webkit-animation: gZmgDU 0.3s ease forwards;
+  animation: gZmgDU 0.3s ease forwards;
+  background: #0c87e7;
+  border-radius: 18px 18px 18px 0;
+  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.15);
+  color: #fff;
+  display: inline-block;
+  font-size: 14px;
+  max-width: 64% !important;
+  margin: 0 0 10px 0;
+  overflow: hidden;
+  position: relative;
+  padding: 12px;
+  -webkit-transform: scale(0);
+  -ms-transform: scale(0);
+  transform: scale(0);
+  -webkit-transform-origin: bottom left;
+  -ms-transform-origin: bottom left;
+  transform-origin: bottom left;
+}
+
+/* burbuja del usuario */
+.hImtoW {
+  -webkit-animation: gZmgDU 0.3s ease forwards;
+  animation: gZmgDU 0.3s ease forwards;
+  background: #C0C0C0;
+  border-radius: 18px 18px 0 18px;
+  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.15);
+  color: #fff;
+  display: inline-block;
+  font-size: 14px;
+  max-width: 80% !important;
+  margin: 0 0 10px 0;
+  overflow: hidden;
+  position: relative;
+  padding: 12px;
+  -webkit-transform: scale(0);
+  -ms-transform: scale(0);
+  transform: scale(0);
+  -webkit-transform-origin: bottom right;
+  -ms-transform-origin: bottom right;
+  transform-origin: bottom right;
+}
+
+
+
+
 /* textos */
 
 .text-fundacionK{
