--- a/src/index.css
+++ b/src/index.css
@@ -587,7 +587,7 @@ button.close2 {
 }
 .col-xs-3 {
   width: 30%;
-  float: left;
+  /* float: left; */
 }
 .card3 {
   width: 70%;
@@ -673,7 +673,7 @@ button.close2 {
 
 .col-xs-3 {
   width: 30%;
-  float: left;
+  /* float: left; */
 }
 
 .card-3 {
@@ -758,7 +758,7 @@ button.close2 {
 
 .col-xs-3 {
   width: 30%;
-  float: left;
+  /* float: left; */
 }
 
 .card-3 {
@@ -846,7 +846,7 @@ button.close2 {
 }
 .col-xs-3 {
   width: 30%;
-  float: left;
+  /* float: left; */
 }
 
 .card-3 {
@@ -910,7 +910,7 @@ button.close2 {
 
 .col-xs-3 {
   width: 30%;
-  float: left;
+  /* float: left; */
 }
 
 .card-3 {
@@ -999,7 +999,7 @@ button.close2 {
 
 .col-xs-3 {
   width: 30%;
-  float: left;
+  /* float: left; */
 }
 
   .text-farinter-size{
@@ -1080,7 +1080,7 @@ button.close2 {
 
 .col-xs-3 {
   width: 30%;
-  float: left;
+  /* float: left; */
 }
 
   .text-farinter-size{
@@ -1149,7 +1149,7 @@ button.close2 {
  
 .col-xs-3 {
   width: 30%;
-  float: left;
+  /* float: left; */
 }
 
 .card3 {
@@ -1236,7 +1236,7 @@ button.close2 {
  
 .col-xs-3 {
   width: 30%;
-  float: left;
+  /* float: left; */
 }
 
 .card-3 {
@@ -1297,7 +1297,7 @@ button.close2 {
  
 .col-xs-3 {
   width: 30%;
-  float: left;
+  /* float: left; */
 }
 
   .card-2 {
@@ -1371,7 +1371,7 @@ button.close2 {
 
 .col-xs-3 {
   width: 30%;
-  float: left;
+  /* float: left; */
 }
 
   .card-2 {
@@ -1467,7 +1467,7 @@ button.close2 {
 
 .col-xs-3 {
   width: 30%;
-  float: left;
+  /* float: left; */
 }
 
 .card-2 {
@@ -1537,7 +1537,7 @@ button.close2 {
  
 .col-xs-3 {
   width: 30%;
-  float: left;
+  /* float: left; */
 }
 
   .text-farinter-size{
@@ -1665,7 +1665,7 @@ button.close2 {
 
 .col-xs-3 {
   width: 30%;
-  float: left;
+  /* float: left; */
 }
 
 .card3 {
